fix: prevent event creation on mobile scroll

--- a/src/style.css
+++ b/src/style.css
@@ -51,6 +51,7 @@ button {
 
 input{
   border: none;
+  font-size: 1rem;
 }
 
 ul{
